Fix card spacing on index page

--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -156,6 +156,7 @@ h2{
     display: flex;
     justify-content: space-around;
     flex-flow: row wrap;
+    gap: 100px;
 }
 
 .intro-card{
